# Image_DCT_Recovery

./: Cargo.toml  README.md
bv-recovery/: bv-simul.py
decoder/: Cargo.toml
decoder/src/: lib.rs  mod.rs
decoder/src/format/: arw.rs
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/image/: image.rs  mod.rs
lib/src/image/transformations/: grayscale.rs  mod.rs  utils.rs
prediction_recovery/: .gitignore  Cargo.toml
prediction_recovery/src/: dct.rs  main.rs  recovery.rs
prediction_recovery/ui/: package-lock.json  package.json
prediction_recovery/ui/src/: App.tsx
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  proof_crop.json
